# advent2021

./: Cargo.toml  README.md
.cargo/: config.toml
advent/: Cargo.toml
advent/inputs/24/: example
advent/outputs/13/: output
advent/src/: bench.rs  check.rs  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  gif.rs  lib.rs
day/: Cargo.toml  README.md
day/src/: lib.rs
src/: bench.rs  check.rs  day01.rs  lib.rs  macros.rs  main.rs
