[package]
name = "advent"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "1.0"
nix = "0.23"
day = { path = "../day" }
itertools = "0.10.3"

[[bin]]
name = "advent"
test = false
bench = false
